<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ViewSavedActivity" >

    <LinearLayout
        android:id="@+id/linearLayoutSaved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewClickable1Saved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/view_saved_header_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/textViewNameAdapterSaved"
                android:layout_width="140sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/name_column_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:id="@+id/imageViewTrademarkSaved"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/tmlogo" />

            <ImageView
                android:id="@+id/imageViewDomainSaved"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/domain" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/twitter" />

            <ImageView
                android:id="@+id/imageViewFacebookSaved"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="right"
                android:layout_marginLeft="20dp"
                android:src="@drawable/facebook" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutBottomSaved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayoutSaved"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/savedBackButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/view_saved_back_button_label" />

        <Button
            android:id="@+id/savedDeleteAllButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/view_saved_delete_all_button_label" />
    </LinearLayout>

    <ListView
        android:id="@+id/listViewSaved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayoutBottomSaved"
        android:layout_alignLeft="@+id/linearLayoutSaved"
        android:layout_below="@+id/linearLayoutSaved"
        android:layout_marginBottom="5dp" >

    </ListView>

</RelativeLayout>